--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "mysql2": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
